--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.2",
+    "next": "^14.2.20",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
